--- a/_data/user-stories.yaml
+++ b/_data/user-stories.yaml
@@ -1,93 +1,89 @@
-- theme: Metadata
+- theme: Outcomes Metadata
   as-a: Repository Manager
   want: a tool that makes it easy for researchers/users to add basic metadata to their research data
   so-that: it is more findable and useful
-- theme: Validation
-  as-a: Researcher/Publisher
+- theme: Outcomes Validation
+  as-a: Provider/Publisher
   want: to know that my data conforms to its Data Package “profile” (tabular, fiscal, etc.)
-  so-that: I can feel trust in the validity and usefulness of the data.
-- theme: Validation
+  so-that: I can feel trust in the validity and usefulness of the data I am sending or recieving.
+- theme: Outcomes Validation
   as-a: Researcher/Publisher
   want: validate my data with a minimum of clicks
   so-that: I can feel trust in the validity and usefulness of the data.
-- theme: Validation
+- theme: Outcomes Validation
   as-a: Researcher/Publisher
   want: to understand the ways in which my data is invalid
   so-that: I can know how to fix it.
-- theme: Validation
+- theme: Outcomes Validation
   as-a: Publisher
   want: to be able to check that every time I update my data it is still good (conforms to schema)
   so-that: I can catch errors early and publish reliable data.
-- theme: Validation
+- theme: Outcomes Validation
   as-a: Developer/Wrangler
   want: to use a command line tool that allows me to validate data
   so-that: I can feel trust in the validity and usefulness of the data quickly and in the context of my command line workflow.
-- theme: Validation
+- theme: Outcomes Validation
   as-a: Developer
   want: an online service that is connected to my data repository (e.g. git repo) that validates data on update
   so-that: I can delegate data validation to a third party.
-- theme: Validation
+- theme: Outcomes Validation
   as-a: Government Representative
   want: to make it easy to prove that our published data is valid
   so-that: I can claim that we are living up to our transparency commitments.
-- theme: Validation
+- theme: Outcomes Validation
   as-a: Civic Tech Activist
-  want: to make it easy to assess the quality of data published by the government
-  so-that: I can make sure that government is living up to its transparency commitments.
-- theme: Preview
+  want: to make it easy to build useful applications for local skill matching
+  so-that: I can make sure that underserved job seekers in my area have better access to the information they need to make smart decsions.
+- theme: Outcomes Validation
   as-a: Publisher
   want: to embed an interactive preview of my data on my site
   so-that: users can be encouraged that this is the correct data for them.
-- theme: Preview
+- theme: Outcomes Validation
   as-a: Publisher
   want: to embed a preview button on my site
   so-that: users can preview the data and be encouraged that this is the correct data for them.
-- theme: Preview
+- theme: Outcomes Validation
   as-a: Publisher
   want: to know how many users have previewed a dataset
   so-that: I know how interest in a dataset relates to its actual download numbers.
-- them: Import
+- them: Skills Import
   as-a: Researcher
-  want: to get a Data Package into R in seconds
+  want: to get open skills data into R in seconds
+  so-that: I can start using the data for doing analysis and visualizations.
+- them: Skills Import
+  as-a: Researcher
+  want: to get open skills data into Excel in seconds
   so-that: I can start using the data for doing analysis and visualizations.
 - them: Import
   as-a: Researcher
-  want: to get a Data Package into Excel in seconds
+  want: to get open skills data into SPSS in seconds
   so-that: I can start using the data for doing analysis and visualizations.
 - them: Import
   as-a: Researcher
-  want: to get a Data Package into SPSS in seconds
-  so-that: I can start using the data for doing analysis and visualizations.
-- them: Import
-  as-a: Researcher
-  want: to get a Data Package into STATA in seconds
+  want: to get open skills data into STATA in seconds
   so-that: I can start using the data for doing analysis and visualizations.
 - them: Import
   as-a: Researcher/Developer/Wrangler
-  want: to get a Data Package into Postgres in seconds
+  want: to get open skills data into Postgres in seconds
   so-that: I can start using the data for doing analysis and visualizations.
-- theme: Crosswalk
-  as-a: Researcher working with Ecological Metadata
-  want: to be able to translate my EML dataset to a Data Package
-  so-that: I can benefit from the wide array of tools available for Data Packages.
-- theme: Visualization
+- theme: Outcomes Crosswalk
+  as-a: Researcher working with job posting Metadata
+  want: to be able to translate my job posting dataset to the schema.org jobs posting
+  so-that: I can benefit from the wide array of tools available for the schema.org format.
+- theme: Outcomes Visualization
   as-a: Publisher
-  want: to be able to provide a visualization of data in the Data Package
+  want: to be able to provide a visualization of data published through the Training Provider Outcomes Toolkit
   so-that: I can provide my analysis and show my work to users of the data. 
-- theme: Visualization
-  as-a: Researcher
-  want: to be able to save new visualizations
-  so-that: I can share them with others or include them in the Data Package.
-- theme: Creation
+- theme: Outcomes Creation
   as-a: Publisher
   want: to publish my data quickly and easily online.
-- theme: Creation
+- theme: Outcomes Creation
   as-a: Developer
   want: to customize an existing wizard for my specific type of data (e.g. including data validation for my schema)
   so-that: I can give my users a great user experience
-- theme: Enrichment
+- theme: Outcomes Enrichment
   as-a: Researcher/Government Representative
-  want: to add general reference data to my narrow dataset
+  want: to add additional data to my narrow published dataset
   so-that: my dataset is more useful.
 - theme: Enrichment
   as-a: Researcher/Government Representative
