--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ short_title: Data at Work
 upcoming_thing: "June 21: Data@Work Research Hub Webinar"
 upcoming_thing_url: "https://dsapp-data-at-work-research-hub.eventbrite.com/"
 description: |
-  Data, tools, and lightweight standards to make a more open and interoperable 21st centruy workforce data ecosystem.
+  Data, tools, and lightweight standards to make a more open and interoperable 21st century workforce data ecosystem.
 baseurl: ""
 url: "http://dataatwork.org" # the base hostname & protocol for your site
 github_username:  workforce-data-initiative
