Update 'upcoming thing' to funding application

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: Data at Work
 short_title: Data at Work
-upcoming_thing: "June 21: Data@Work Research Hub Webinar"
-upcoming_thing_url: "https://dsapp-data-at-work-research-hub.eventbrite.com/"
+upcoming_thing: "Apply for Funding!"
+upcoming_thing_url: "https://goo.gl/forms/V6k8ZWvymyeuv6Sk2"
 description: |
   Data, tools, and lightweight standards to make a more open and interoperable 21st century workforce data ecosystem.
 baseurl: ""
