Case Studies/Funded Opp. Updates
- Merge Case Studies and User Stories pages
- Add link to Michigan WDQC case study
- Update copy/link/deadline for funded research opportunity

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Data at Work
 short_title: Data at Work
 upcoming_thing: "Apply for Funding!"
-upcoming_thing_url: "https://goo.gl/forms/V6k8ZWvymyeuv6Sk2"
+upcoming_thing_url: "/data/#funded-research-opportunity"
 description: |
   Data, tools, and lightweight standards to make a more open and interoperable 21st century workforce data ecosystem.
 baseurl: ""
