--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: Data at Work
 short_title: Data at Work
-upcoming_thing: "Apply for Funding!"
-upcoming_thing_url: "/data/#funded-research-opportunity"
+upcoming_thing: ""
+upcoming_thing_url: ""
 description: |
   Data, tools, and lightweight standards to make a more open and interoperable 21st century workforce data ecosystem.
 baseurl: ""
